# rustwave

./: .env.example  .gitignore  AppIcon.icns  CLAUDE.md  Cargo.toml  LICENSE  README.md  build_app.sh  run_app.sh
.github/workflows/: ci.yml  macos-bundle.yml  release.yml  windows-build.yml
.windsurf/rules/: coding-guidelines.md
src/: api_helpers.rs  auth.rs  auth_page.rs  config.rs  constants.rs  main.rs  models.rs  page_b.rs  queue_manager.rs  soundcloud.rs  stream_manager.rs  track_list_manager.rs  utilities.rs
src/managers/: audio.rs  audio_buffer.rs  mod.rs  queue.rs  stream.rs  track_list.rs
src/models/: activity.rs  item.rs  message.rs  mod.rs  playlist.rs  search.rs  track.rs  user.rs
src/pages/: auth_page.rs  feed_page.rs  likes_page.rs  mod.rs  playlist_page.rs  search_page.rs  user_page.rs
src/soundcloud/: api.rs  api_helpers.rs  auth.rs  mod.rs
src/widgets/: mod.rs  playback_bar.rs  playlist_widget.rs  section.rs  spinner.rs  track_widget.rs  user_widget.rs  waveform_widget.rs
