[package]
name = "rustwave"
version = "0.1.1"
edition = "2024"

[dependencies]
directories = "6.0.0"
dotenv = "0.15.0"
iced = { version = "0.13.1", features = ["tokio", "image", "svg", "canvas"] }
image = "0.25"
lazy_static = "1.5.0"
oauth2 = { version = "5.0", features = ["reqwest-blocking"] }
reqwest = { version = "0.12.23", features = ["json"] }
rodio = "0.21.1"
serde = { version = "1.0.211", features = ["derive"] }
serde_json = "1.0.132"
souvlaki = "0.8.3"
tokio = {version = "1.47.1", features = ["full"]}
tokio-util = "0.7.16"
toml = "0.8"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5.7"
